<resources>
    <string name="app_name">Noter</string>
    <string name="app_subtitle">A safe place for your thoughts.</string>
    <string name="hamburger">Hamburger</string>
    <string name="account">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="menu_search">Search your notes . . .</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="cnf_password">Confirm Password</string>
    <string name="already_a_user">Already a user?</string>
    <string name="not_yet_registered">Not yet registered?</string>
    <string name="auth_warning">Please input valid details</string>

    <string name="all_notes">Notes</string>
    <string name="starred">Starred</string>
    <string name="archives">Archives</string>
    <string name="delete">Delete</string>
    <string name="trash">Trash</string>
    <string name="restore">Restore</string>
    <string name="delete_permanent">Delete Forever</string>
    <string name="openSource">Open-Source</string>

    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="content">Note it down …</string>

    <string name="general">General</string>
    <string name="about">About</string>

    <string name="theme">Theme</string>
    <string name="select_theme">Choose a theme</string>
    <string name="system_theme">System Default</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="system_default">system</string>
    <string name="light">light</string>
    <string name="dark">dark</string>

    <string name="count_1">1</string>
    <string name="count_2">2</string>
</resources>