<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/menu_group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/all_notes"
            android:title="@string/all_notes"
            android:icon="@drawable/ic_baseline_note_24"
            app:showAsAction="ifRoom|withText"
            android:checkable="true"/>
        <item
            android:id="@+id/starred"
            android:title="@string/starred"
            android:icon="@drawable/ic_baseline_star_24"
            app:showAsAction="ifRoom|withText"
            android:checkable="true"/>
        <item
            android:id="@+id/archives"
            android:title="@string/archives"
            android:icon="@drawable/ic_baseline_archive_24"
            app:showAsAction="ifRoom|withText"
            android:checkable="true"/>
        <item
            android:id="@+id/trash"
            android:title="@string/trash"
            android:icon="@drawable/ic_baseline_delete_24"
            app:showAsAction="ifRoom|withText"
            android:checkable="true"/>
    </group>
    <group
        android:id="@+id/menu_group_link">
        <item
            android:id="@+id/github_link"
            android:icon="@drawable/ic_baseline_github_24"
            android:title="@string/openSource"
            app:showAsAction="ifRoom|withText"/>
    </group>
</menu>