<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="100dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_baseline_local_library_24"
            android:scaleType="fitXY"
            android:contentDescription="@string/app_name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="50dp"
            android:backgroundTint="?attr/colorSurface"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/login_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_warning"
            android:textColor="@color/design_default_color_error"
            android:visibility="invisible"/>

    </LinearLayout>

</ScrollView>

